--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,78 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+    animation: App-logo-spin infinite 20s linear;
+    height: 80px;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+    background-color: #222;
+    height: 150px;
+    padding: 20px;
+    color: white;
 }
 
 .App-intro {
-  font-size: large;
-  padding-top: 10px;
+    font-size: large;
+    padding-top: 10px;
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
-.inline {
-  display: inline;
+nav {
+    position: absolute;
+}
+
+nav li {
+    display: inline;
+    margin: 1em;
+    font-weight: 800;
+    font-size: 1.2em;
+}
+
+nav li a {
+    color: #FFF;
+    text-decoration: none;
+}
+
+.home,
+.sidebar {
+    box-sizing: border-box;
+}
+
+.sidebar {
+    width: 30%;
+    padding: 1em;
+    float: left;
+}
+
+.sidebar img {
+    max-width: 50%;
+    margin-top: 1em;
+    border-radius: 5px;
+}
+
+.home {
+    float: right;
+    width: 70%;
+    padding: 2em;
+}
+
+.questions p {
+    font-size: 0.85em;
+    margin: 0.25em;
+}
+
+.question {
+    font-weight: 800;
+    font-style: italic;
 }
